feat(BODY): Transform arif-fazil.com to red/black theme with fractal/triangle patterns - Red primary (#8B0000) on black (#050505) - Triangle patterns: Sierpinski geometric backgrounds - Fractal SVG noise overlay - Replaced avatar with animated Sierpinski triangle SVG - Earth/Economics/AI themed cards with strata, market, neural patterns

--- a/body/index.html
+++ b/body/index.html
@@ -33,7 +33,7 @@
     
     <!-- PWA -->
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#f59e0b" />
+    <meta name="theme-color" content="#8B0000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Arif Fazil" />
@@ -100,8 +100,8 @@
     </script>
     
     <!-- Version -->
-    <meta name="arifos-version" content="v55.2-TRINITY" />
-    <meta name="arifos-status" content="SOVEREIGNLY_SEALED" />
+    <meta name="arifos-version" content="v55.2-FORGE" />
+    <meta name="arifos-status" content="FORGED_IN_RED" />
   </head>
   <body>
     <div id="root"></div>
