chore: Update THEORY to gold/yellow theme + HUMAN to ARIF FAZIL identity

--- a/HUMAN/index.html
+++ b/HUMAN/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Muhammad Arif bin Fazil | Sovereign Architect of arifOS</title>
-    <meta name="title" content="Muhammad Arif bin Fazil | Sovereign Architect of arifOS" />
+    <title>ARIF FAZIL | Sovereign Architect of arifOS</title>
+    <meta name="title" content="ARIF FAZIL | Sovereign Architect of arifOS" />
     <meta name="description" content="Sovereign Architect of the arifOS kernel. Building constitutionally-bound AI systems that reason (AGI), empathize (ASI), and adjudicate (APEX). Ditempa Bukan Diberi — Forged, Not Given." />
     <meta name="keywords" content="Muhammad Arif bin Fazil, arifOS, AI governance, constitutional AI, Trinity architecture, AI safety, sovereign AI" />
-    <meta name="author" content="Muhammad Arif bin Fazil" />
+    <meta name="author" content="ARIF FAZIL" />
     <meta name="robots" content="index, follow" />
     
     <!-- Canonical URL -->
@@ -18,7 +18,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://arif-fazil.com" />
-    <meta property="og:title" content="Muhammad Arif bin Fazil | Sovereign Architect of arifOS" />
+    <meta property="og:title" content="ARIF FAZIL | Sovereign Architect of arifOS" />
     <meta property="og:description" content="Sovereign Architect of the arifOS kernel. Building constitutionally-bound AI systems. Ditempa Bukan Diberi — Forged, Not Given." />
     <meta property="og:image" content="https://arif-fazil.com/arif-hero-og.jpg" />
     <meta property="og:site_name" content="Arif Fazil" />
