fix: Version consistency v55.3 + AI discoverability improvements
- Bumped HUMAN llms.txt and llms.json to v55.3 (was v55.2)
- Added <link rel="alternate" type="text/plain" href="/llms.txt"> to all 3 sites
- Added <link rel="alternate" type="application/json" href="/llms.json"> for structured data
- Updated README with complete Trinity llms.txt reference table
- Documented machine discovery endpoints (well-known, robots.txt, sitemap.xml)

This addresses Claude's feedback on version drift and discoverability.

--- a/APPS/index.html
+++ b/APPS/index.html
@@ -47,6 +47,8 @@
     <link rel="hta-soul" href="https://apex.arif-fazil.com" title="SOUL — Constitutional Canon" />
     
     <!-- LLM Discovery -->
+    <link rel="alternate" type="text/plain" href="/llms.txt" title="LLM Context — Implementation Stack" />
+    <link rel="alternate" type="application/json" href="/llms.json" title="LLM Context — MCP Tools" />
     <link rel="llms-txt" href="/llms.txt" type="text/plain" />
     <meta name="llms-txt" content="/llms.txt" />
     
