--- a/THEORY/index.html
+++ b/THEORY/index.html
@@ -43,6 +43,8 @@
     <link rel="hta-soul" href="https://apex.arif-fazil.com" title="SOUL — Constitutional Canon" />
     
     <!-- LLM Discovery -->
+    <link rel="alternate" type="text/plain" href="/llms.txt" title="LLM Context — Constitutional Canon" />
+    <link rel="alternate" type="application/json" href="/llms.json" title="LLM Context — 13 Floors Data" />
     <link rel="llms-txt" href="/llms.txt" type="text/plain" />
     <meta name="llms-txt" content="/llms.txt" />
     
