fix(naazira): QC manager pass - real QR + ALL CAPS name
QC issues fixed from sub-agent commit:
- Replaced fake SVG QR with real QR Server API image
- Restored ALL CAPS: NAAZIRA FAZIL throughout visible text
- Added letter-spacing + text-shadow for contrast
- Meta tags kept proper case for SEO

--- a/HUMAN/public/naazira-fazil/index.html
+++ b/HUMAN/public/naazira-fazil/index.html
@@ -111,7 +111,7 @@
         nav { position: fixed; top: 0; width: 100%; background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); z-index: 1000; border-bottom: 1px solid var(--border); transition: all var(--transition-smooth); }
         nav.scrolled { box-shadow: var(--shadow-md); }
         .nav-container { max-width: 1200px; margin: 0 auto; padding: 0.875rem 2rem; display: flex; justify-content: space-between; align-items: center; }
-        .logo { font-size: 1.375rem; font-weight: 700; color: var(--primary); letter-spacing: -0.5px; }
+        .logo { font-size: 1.375rem; font-weight: 800; color: var(--primary); letter-spacing: 0.05em; }
         .nav-links { display: flex; gap: 0.5rem; list-style: none; }
         .nav-links a { display: block; padding: 0.5rem 1rem; text-decoration: none; color: var(--text-secondary); font-weight: 500; font-size: 0.9rem; border-radius: var(--radius-sm); transition: all var(--transition-fast); position: relative; }
         .nav-links a:hover { color: var(--primary); background: var(--bg-tertiary); }
@@ -133,7 +133,7 @@
         .hero-content { color: white; animation: fadeInUp 0.8s ease-out; }
         .hero-badge { display: inline-flex; align-items: center; gap: 0.5rem; background: rgba(255,255,255,0.15); backdrop-filter: blur(10px); padding: 0.5rem 1rem; border-radius: 30px; font-size: 0.85rem; font-weight: 500; margin-bottom: 1.5rem; border: 1px solid rgba(255,255,255,0.2); }
         .hero-badge-dot { width: 8px; height: 8px; background: var(--accent-light); border-radius: 50%; animation: pulse 2s infinite; }
-        .hero-content h1 { font-size: 3.5rem; font-weight: 800; line-height: 1.1; margin-bottom: 0.75rem; letter-spacing: -1px; }
+        .hero-content h1 { font-size: 3.5rem; font-weight: 800; line-height: 1.1; margin-bottom: 0.75rem; letter-spacing: 0.08em; text-shadow: 0 2px 10px rgba(0,0,0,0.3); }
         .hero-content .tagline { font-size: 1.25rem; font-weight: 500; opacity: 0.9; margin-bottom: 1.5rem; letter-spacing: 0.3px; }
         .hero-content .summary { font-size: 1.05rem; line-height: 1.8; opacity: 0.9; margin-bottom: 2rem; max-width: 560px; }
         .hero-stats { display: flex; gap: 2.5rem; margin-bottom: 2.5rem; padding: 1.5rem 0; border-top: 1px solid rgba(255,255,255,0.15); border-bottom: 1px solid rgba(255,255,255,0.15); }
@@ -351,7 +351,7 @@
 <body>
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo">Naazira Fazil</div>
+            <div class="logo">NAAZIRA FAZIL</div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -375,7 +375,7 @@
                     <span class="hero-badge-dot"></span>
                     Available for New Opportunities
                 </div>
-                <h1>Naazira Fazil</h1>
+                <h1>NAAZIRA FAZIL</h1>
                 <p class="tagline">Lab Administrator • Inventory Assistant • Technical Support</p>
                 <p class="summary">
                     Detail-oriented Lab Administrator & Inventory Assistant with over 3 years of experience in laboratory operations, inventory control, procurement, documentation, and technical support. Strong ability to troubleshoot equipment, manage purchasing processes, and support engineering/testing teams.
@@ -403,7 +403,7 @@
                 <div class="profile-card">
                     <div class="profile-header">
                         <div class="profile-avatar">👩‍🔬</div>
-                        <h3>Naazira Fazil</h3>
+                        <h3>NAAZIRA FAZIL</h3>
                         <p>Lab Administrator @ UST Global</p>
                     </div>
                     <div class="profile-details">
@@ -809,52 +809,7 @@
                 </div>
                 <div class="qr-section animate-on-scroll delay-300">
                     <div class="qr-code">
-                        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="200" height="200" fill="white"/>
-                            <rect x="20" y="20" width="40" height="40" fill="#0a66c2"/>
-                            <rect x="30" y="30" width="20" height="20" fill="white"/>
-                            <rect x="35" y="35" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="140" y="20" width="40" height="40" fill="#0a66c2"/>
-                            <rect x="150" y="30" width="20" height="20" fill="white"/>
-                            <rect x="155" y="35" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="20" y="140" width="40" height="40" fill="#0a66c2"/>
-                            <rect x="30" y="150" width="20" height="20" fill="white"/>
-                            <rect x="35" y="155" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="70" y="20" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="90" y="20" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="110" y="20" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="70" y="40" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="100" y="40" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="70" y="70" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="80" y="80" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="90" y="70" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="100" y="90" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="110" y="80" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="120" y="70" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="20" y="70" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="40" y="80" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="50" y="90" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="140" y="70" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="150" y="90" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="170" y="80" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="70" y="110" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="90" y="120" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="110" y="110" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="120" y="130" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="20" y="110" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="30" y="130" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="50" y="120" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="140" y="110" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="160" y="120" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="170" y="130" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="70" y="160" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="80" y="170" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="100" y="160" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="120" y="170" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="140" y="160" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="160" y="160" width="10" height="10" fill="#0a66c2"/>
-                            <rect x="170" y="170" width="10" height="10" fill="#0a66c2"/>
-                        </svg>
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?size=160x160&data=https://arif-fazil.com/naazira-fazil/&color=0a66c2" alt="QR Code - Scan to view portfolio" width="160" height="160" loading="lazy">
                     </div>
                     <p class="qr-label">📱 Scan to view portfolio</p>
                     <p class="qr-url">arif-fazil.com/naazira-fazil</p>
@@ -864,7 +819,7 @@
     </section>
 
     <footer>
-        <p>© 2026 Naazira Fazil • Lab Administrator & Inventory Assistant • Pulau Pinang, Malaysia</p>
+        <p>© 2026 NAAZIRA FAZIL • Lab Administrator & Inventory Assistant • Pulau Pinang, Malaysia</p>
     </footer>
 
     <script>
